[tool.poetry]
name = "fastapi-tile38"
version = "0.1.0"
description = "Use Tile38 via FastAPI"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pyle38 = "^0.13.0"
pydantic = "^2.8.2"
fastapi-key-auth = "^0.15.2"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
gitlint = "^0.19.1"
poethepoet = "^0.27.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
httpx = "^0.27.0"
mypy = "^1.11.1"
ruff = "^0.5.7"
python-semantic-release = "^9.8.6"

[mypy]
python_version = 3.10
ignore_missing_imports = true

[tool.poe.tasks]
test       = "poetry run pytest -vv --asyncio-mode=auto -s src/tests/"
test-cov   = "poetry run pytest -vv --asyncio-mode=auto -s --cov=fastapi-tile38 src/tests/"
test-single   = "poetry run pytest -vv --asyncio-mode=auto -s"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "flake8 ."
up         = "docker-compose up"
down       = "docker-compose down"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
