[tool.poetry]
name = "fastapi-tile38"
version = "0.1.0"
description = "Use Tile38 via FastAPI"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
pyle38 = "^0.13.0"
pydantic = "^2.8.2"
fastapi-key-auth = "^0.15.2"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
gitlint = "^0.19.1"
poethepoet = "^0.30.0"
pytest-cov = "^5.0.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
httpx = "^0.27.2"
mypy = "^1.13.0"
ruff = "^0.7.3"

[mypy]
python_version = 3.10
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poe.tasks]
test       = "poetry run pytest -vv --asyncio-mode=auto -s src/tests/"
test-cov   = "poetry run pytest -vv --asyncio-mode=auto -s --cov=fastapi-tile38 src/tests/"
test-single   = "poetry run pytest -vv --asyncio-mode=auto -s"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "ruff check ."
up         = "docker-compose up"
down       = "docker-compose down"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
